src/test/deca/context/invalid/Obj/cast-noncompatible.deca
// Description:
//    Cast entre deux types incompatibles
//
// Résultat:
//?
//
{
    int entier = 2;
    boolean bool = (boolean) entier;
}